Trabalhando no CSS da página addpagina

--- a/addpalavra.html
+++ b/addpalavra.html
@@ -20,13 +20,16 @@
     <header>
         <img src="media/logo_alura_22x48px.png" alt="Logotipo Alura">
     </header>
-    <main>
-        <article>
-            <textarea name="" id="" cols="30" rows="10"></textarea>
+    <main class="main-addpalavras">
+        <article class="box-input-ap">
+            <textarea name="input-palavras" id="input-palavras" class="input-palavras" placeholder="Insira aqui"></textarea>
         </article>
-        <div>
-            <button>Salvar e Começar</button>
-            <a href="index.html" target="_self"  rel="prev"><button>Cancelar</button></a>
+
+        <div class="aviso"><img src="media/aviso_16x16px.png" alt="Símbolo de aviso"><p>Somente letras maiúsculas</p></div>
+
+        <div class="but-addpalavras">
+            <div><button class="but-salvar">Salvar e Começar</button></div>
+            <div><a href="index.html" target="_self"  rel="prev"><button class="but-cancelar">Cancelar</button></a></div>
         </div>
     </main>
     <footer></footer>
