implementação da lógica do sorteio da palavra

--- a/addpalavra.html
+++ b/addpalavra.html
@@ -22,14 +22,15 @@
     </header>
     <main class="main-addpalavras">
         <article class="box-input-ap">
-            <textarea name="input-palavras" id="input-palavras" class="input-palavras" placeholder="Insira aqui"></textarea>
+            <textarea name="input-palavras" id="inputPalavras" class="input-palavras" placeholder="Insira aqui"></textarea>
         </article>
 
-        <div class="aviso"><img src="media/aviso_16x16px.png" alt="Símbolo de aviso"><p>Somente letras maiúsculas</p></div>
+        <div class="aviso"><img src="media/aviso_16x16px.png" alt="Símbolo de aviso"><p>Somente letras maiúsculas, máximo de 8 letras.</p></div>
 
         <div class="but-addpalavras">
-            <div><button class="but-salvar">Salvar e Começar</button></div>
-            <div><a href="index.html" target="_self"  rel="prev"><button class="but-cancelar">Cancelar</button></a></div>
+            <div><button id="but-salvar" class="but-salvar">Salvar e Começar</button></div>
+            <div><button id="but-adicionarout" class="but-adicionarout">Adicionar Outra Palavra</button></div>
+            <div><a href="index.html" target="_self"  rel="prev"><button id="but-cancelar" class="but-cancelar">Cancelar</button></a></div>
         </div>
     </main>
     <footer></footer>
