avançando no layout e no Js

--- a/game.html
+++ b/game.html
@@ -43,11 +43,13 @@
     </main>
 
     <main class="main-game" id="main-game">
-        <div id="canvaForca"></div>
-        <div></div>
-        <div>
-            <button>Novo Jogo</button>
-            <a href="index.html" target="_self"  rel="prev"><button>Desistir</button></a>
+        <div class="canvaForca" id="canvaForca"></div>
+        <div class="campo-palavra" id="campo-palavra"></div>
+        <div class="but-games" id="but-games">
+            <div class="game-grid-but">
+                <button>Novo Jogo</button>
+                <button>Desistir</button>
+            </div>
         </div>
     </main>
 
