trabalhei no css da parte de jogo e um pouco no js

--- a/game.html
+++ b/game.html
@@ -44,7 +44,10 @@
 
     <main class="main-game" id="main-game">
         <div class="canvaForca" id="canvaForca"></div>
-        <div class="campo-palavra" id="campo-palavra"></div>
+        <div class="campo-palavra" id="campo-palavra">
+            <p id="letrasCorretas" class="letrasCorretas"></p>
+            <p id="letrasIncorretas" class="letrasIncorretas"></p>
+        </div>
         <div class="but-games" id="but-games">
             <div class="game-grid-but">
                 <button>Novo Jogo</button>
