--- a/game.html
+++ b/game.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="style.css">
 
     <script src="script.js" defer></script>
+    <script src="canvas.js" defer></script>
     
 </head>
 <body>
@@ -43,7 +44,9 @@
     </main>
 
     <main class="main-game" id="main-game">
-        <div class="canvaForca" id="canvaForca"></div>
+        <div class="canvaForca" id="canvaForca">
+            <canvas width="800" height="400"></canvas>
+        </div>
         <div class="campo-palavra" id="campo-palavra">
             <p id="letrasCorretas" class="letrasCorretas"></p>
             <p id="letrasIncorretas" class="letrasIncorretas"></p>
