Jogo finalizado. Falta trabalhar responsividade e acessibilidade

--- a/game.html
+++ b/game.html
@@ -34,7 +34,7 @@
             <textarea name="input-palavras" id="inputPalavras" class="input-palavras" placeholder="Insira aqui"></textarea>
         </article>
 
-        <div class="aviso"><img src="media/aviso_16x16px.png" alt="Símbolo de aviso"><p>Somente letras maiúsculas, máximo de 8 letras.</p></div>
+        <div class="aviso"><img src="media/aviso_16x16px.png" alt="Símbolo de aviso"><p>Somente letras maiúsculas.</p></div>
 
         <div class="but-addpalavras">
             <div><button id="but-salvar" class="but-salvar">Salvar e Começar</button></div>
@@ -53,8 +53,8 @@
         </div>
         <div class="but-games" id="but-games">
             <div class="game-grid-but">
-                <button>Novo Jogo</button>
-                <button>Desistir</button>
+                <button id="gameNovojogo" class="gameNovojogo">Novo Jogo</button>
+                <button id="gameDesistir" class="gameDesistir">Desistir</button>
             </div>
         </div>
     </main>
