--- a/game.html
+++ b/game.html
@@ -51,16 +51,15 @@
             <p id="letrasCorretas" class="letrasCorretas"></p>
             <p id="letrasIncorretas" class="letrasIncorretas"></p>
         </div>
+        <div class="teclado" id="teclado">
+        </div>
         <div class="but-games" id="but-games">
             <div class="game-grid-but">
                 <button id="gameNovojogo" class="gameNovojogo">Novo Jogo</button>
+                <button id="tecladoVirtual" class="tecladoVirtual">Teclado Virtual</button>
                 <button id="gameDesistir" class="gameDesistir">Desistir</button>
             </div>
         </div>
     </main>
-
-    <footer>
-
-    </footer>
 </body>
 </html>
